--- a/ShopContent/ShopContent.csproj
+++ b/ShopContent/ShopContent.csproj
@@ -6,4 +6,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Classes\" />
+    <Folder Include="Context\" />
+    <Folder Include="Images\" />
+    <Folder Include="Modell\" />
+    <Folder Include="View\" />
+    <Folder Include="ViewModell\" />
+  </ItemGroup>
+
 </Project>
